added hole cards

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,6 +4,7 @@ OPTIONS = -std=c++0x -g -Wall
 LINK_TARGET = bin/jpoker.exe
 
 OBJS =  \
+ configurator.o \
  card.o \
  table.o \
  poker.o \
@@ -20,6 +21,7 @@ $(LINK_TARGET) : $(OBJS)
 %.o : %.cpp
 	$(COMPILER) $(OPTIONS) -o $@ -c $<
 
+configurator.o : configurator.h
 poker.h: enums.h
 card.o: card.h
 player.o : player.h
